[package]
name = "lagging_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.4.0", features = ["rustls-0_21"] }
rustls = "0.21.8"
rustls-pemfile = "^1.0.3"
rand = "0.8.5"
clap = { version = "^4.3.21", features = ["derive"] }