[package]
name = "lagging_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "^4.4.0", features = ["rustls-0_21"] }
rustls = "0.23.12"
rustls-pemfile = "^2.1.2"
rand = "0.8.5"
clap = { version = "^4.3.21", features = ["derive"] }